[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"           # 用于 SHA-256 哈希计算
chrono = "0.4"         # 用于时间戳
serde = { version = "1.0", features = ["derive"] } # 用于序列化和反序列化
serde_json = "1.0"     # 用于 JSON 格式化
ring = "0.16"          # 用于交易签名和验证
rand = "0.8"           # 用于生成随机数（密钥对）
hex = "0.4"            # 用于十六进制编码和解码
